--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ nav ul li a {
     text-align: center;
 }
 
+li {
+    list-style-type: none;
+}
+
 footer {
     background-color: #333;
     color: #fff;
