--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,15 @@
 
 /* Global Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Shippori Antique, sans-serif;
     line-height: 1.6;
 }
+
+.shippori-antique-regular {
+    font-family: "Shippori Antique", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 
 .container {
     max-width: 960px;
